--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,9 +16,10 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-alloy = { version = "1.0.27", features = ["full", "node-bindings", "rpc-client-ws"] }
+alloy = { version = "1.0.27", features = ["full", "contract", "node-bindings", "rpc-client-ws", "signers"] }
 alloy-primitives = "1.3.1"
 alloy-sol-types = "1.3.1"
+alloy-contract = "1.0.27"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
 redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
 anyhow = "1.0.99"
