--- a/backend/orchestrator/Cargo.toml
+++ b/backend/orchestrator/Cargo.toml
@@ -19,11 +19,11 @@ tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 alloy = { workspace = true }
 alloy-primitives = { workspace = true }
-sqlx = { workspace = true }
-redis = { workspace = true }
+alloy-sol-types = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 dotenv = { workspace = true }
 uuid = { workspace = true }
 chrono = { workspace = true }
 async-trait = { workspace = true }
+hex = { workspace = true }
