Update Kaia Kairos RPC endpoint to new URL everywhere

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Kaia Kairos Testnet Configuration
-KAIROS_RPC_URL=https://public-en.kairos.node.kaia.io
+KAIROS_RPC_URL=https://public-en-kairos.node.kaia.io
 
 # Safe Contract Address (after deployment)
 SAFE_ADDRESS=0x0000000000000000000000000000000000000000
