--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your values
 
 # Network Configuration (Kairos Testnet ONLY)
-KAIROS_RPC_URL=https://public-en.kairos.node.kaia.io
+KAIROS_RPC_URL=https://public-en-kairos.node.kaia.io
 
 # Deployment Private Key (TESTNET ONLY - Never use mainnet keys!)
 DEPLOYER_PRIVATE_KEY=0x...
