Integrate Safe contract ABI and execution logic
- Add ISafe.json ABI file for contract interaction - Implement
SafeExecutor for contract calls and transaction execution - Update main
orchestrator logic to use SafeExecutor for nonce, transaction hash, and
execution - Improve Python signing script for Safe tx hash handling and
UX

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,8 @@ KAIROS_RPC_URL=https://public-en-kairos.node.kaia.io
 # Safe Contract Address (after deployment)
 SAFE_ADDRESS=0x0000000000000000000000000000000000000000
 
+EXECUTOR_PRIVATE_KEY=0x...
+
 # Signer Addresses (public addresses only - NO PRIVATE KEYS IN BACKEND!)
 HUMAN1_ADDRESS=0x...
 HUMAN2_ADDRESS=0x...
